# DemoProject

./: Cargo.toml  README.md
.github/workflows/: build.yml
core/: settings.py
src/: lib.rs  main.rs
src/extractor/: image.rs  pdf.rs
src/generator/: llm.rs  mod.rs  prompt.rs
src/output/: docx.rs  json.rs  mod.rs
src/parser/: cq.rs  mcq.rs  mod.rs
